--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,11 @@
-name: Solinia3Core
-main: com.solinia.solinia.Solinia3CorePlugin
+name: Solinia3Chat
+main: com.solinia.solinia.chat.Solinia3ChatPlugin
 version: 1.0
 commands:
   trance:
-    description: Displays additional information about Solinia3Core
-    usage: /solinia
+    description: Displays additional information about Solinia3Chat
+    usage: /soliniachat
     alias: []
 depend:
+- Solinai3Chat
 softdepend:
-- Vault
-- Essentials
