--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/EssentialsX-2.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/spigot-1.12.1.jar"/>
-	<classpathentry kind="lib" path="lib/Vault.jar"/>
+	<classpathentry kind="lib" path="E:/dev/git/solinia3-core/lib/EssentialsX-2.0.1.jar"/>
+	<classpathentry kind="lib" path="E:/dev/git/solinia3-core/lib/spigot-1.12.1.jar"/>
+	<classpathentry kind="lib" path="E:/dev/git/solinia3-core/lib/Vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
