--- a/plugin.yml
+++ b/plugin.yml
@@ -17,7 +17,9 @@ commands:
   lastname:
     description: Sets player lastname
     usage: /lastname <lastname>
-    alias: []
+    alias:
+    - name
+    - nick
 depend:
 softdepend:
 - Vault
