ConfigurationManagement, race scaffolding

--- a/plugin.yml
+++ b/plugin.yml
@@ -21,6 +21,10 @@ commands:
     usage: /lastname <lastname>
     alias: 
     - surname
+  mana:
+    description: Gets player mana
+    usage: /mana
+    alias: []
 depend:
 softdepend:
 - Vault
