change spell classes as sub list

--- a/plugin.yml
+++ b/plugin.yml
@@ -150,6 +150,10 @@ commands:
     description: Adds a loot drop table to a loot table
     usage: /addloottablelootdrop loottableid lootdropid
     aliases: []
+  fixspells:
+    description: Fixes spells
+    usage: /fixspells
+    aliases: []
 depend:
 softdepend:
 - Vault
