add /setchannel, /ooc

--- a/plugin.yml
+++ b/plugin.yml
@@ -209,6 +209,14 @@ commands:
     description: Updates a spawngroups location
     usage: /updatespawngrouploc spawngroupid
     aliases: []
+  setchannel:
+    description: Sets current channel
+    usage: /setchannel channelname
+    aliases: []
+  ooc:
+    description: Sends a message to the ooc channel
+    usage: /ooc message
+    aliases: []
 depend:
 softdepend:
 - Vault
