WIP - Simple discord support, config for discord, some more generic fixes (illusions)

--- a/plugin.yml
+++ b/plugin.yml
@@ -16,6 +16,10 @@ commands:
     aliases:
     - name
     - nick
+  today:
+    description: Lists todays RP time
+    usage: /today
+    aliases: []
   lastname:
     description: Sets player lastname
     usage: /lastname <lastname>
